# map_overlay

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: amcl_params.yaml  map_overlay_params.yaml  map_saver_params.yaml
launch/: localization.launch.py  overlay_mapping.launch.py  overlay_session.launch.py
map_overlay/: map_io.py  map_overlay_node.py  map_saver_node.py
map_overlay/core/: __init__.py  localization.py  map_grid.py  map_odom_pf.py  overlay_processor.py  scan_matcher.py  types.py
map_overlay/ros/: amcl_lifecycle.py  map_loader.py
map_overlay/utils/: distance_field.py  geometry.py  log_odds.py
