<?xml version="1.0"?>
<package format="3">
  <name>map_overlay</name>
  <version>0.1.0</version>
  <description>Local occupancy-grid overlay mapping on top of an existing AMCL map</description>
  <maintainer email="ztl@todo.todo">ztl</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
